# hf

./: CMakeCache.txt  CMakeLists.txt  KG_HF.nb  MP2new.cpp  a  cmake_install.cmake  cpp hf  h2.xyz  main.cpp  mp2.cpp
Notes/: Libint notes.aux  Libint notes.out  Libint notes.tex  hfmathe.txt
